--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -12,7 +12,6 @@
             height="100"
           />
           <br />
-          <ion-text color="light" class="fw700"> Ionic 4 Start Theme </ion-text>
         </div>
       </h4>
     </div>
@@ -79,36 +78,12 @@
         <ion-icon name="log-in"></ion-icon>
         Signin
       </ion-button>
-
-      <p class="ion-text-right">
-        <ion-text color="light"> Or Signin with: </ion-text>
-      </p>
-
-      <ion-grid class="btn-group">
-        <ion-row>
-          <ion-col size="4">
-            <ion-button shape="round" expand="full" color="secondary">
-              <ion-icon slot="icon-only" name="logo-facebook"></ion-icon>
-            </ion-button>
-          </ion-col>
-          <ion-col size="4">
-            <ion-button shape="round" expand="full" color="secondary">
-              <ion-icon slot="icon-only" name="logo-twitter"></ion-icon>
-            </ion-button>
-          </ion-col>
-          <ion-col size="4">
-            <ion-button shape="round" expand="full" color="secondary">
-              <ion-icon slot="icon-only" name="logo-googleplus"></ion-icon>
-            </ion-button>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
     </div>
 
     <!-- Other links -->
     <div text-center margin-top>
-      <span (click)="goToRegister()" class="paz" tappable>
-        <ion-text color="light"> New here? <strong>Sign Up</strong> </ion-text>
+      <span text-right tappable (click)="forgotPass()" class="paz">
+        <ion-text color="light"><strong>Esqueceu sua senha?</strong> </ion-text>
       </span>
     </div>
   </div>
