--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -12,7 +12,9 @@
             height="100"
           />
           <br />
+          
         </div>
+       
       </h4>
     </div>
 
@@ -29,18 +31,23 @@
           formControlName="email"
         ></ion-input>
       </ion-item>
-      <p
-        ion-text
-        class="text08"
-        *ngIf="onLoginForm.get('email').touched && onLoginForm.get('email').hasError('required')"
-      >
-        <ion-text color="warning"> Required Field </ion-text>
-      </p>
+      <ion-item no-padding class="animated fadeInUp">
+        <ion-label position="floating">
+          <ion-icon name="calendar" item-start></ion-icon>
+          Data de nascimento
+        </ion-label>
+        <ion-input
+          color="secondary"
+          type="email"
+          formControlName="email"
+        ></ion-input>
+      </ion-item>
+     
 
       <ion-item no-padding class="animated fadeInUp">
         <ion-label position="floating">
           <ion-icon name="lock" item-start></ion-icon>
-          Password
+          Senha
         </ion-label>
         <ion-input
           color="secondary"
@@ -48,25 +55,13 @@
           formControlName="password"
         ></ion-input>
       </ion-item>
-      <p
-        ion-text
-        color="warning"
-        class="text08"
-        *ngIf="onLoginForm.get('password').touched && onLoginForm.get('password').hasError('required')"
-      >
-        <ion-text color="warning"> Required Field </ion-text>
-      </p>
+      
     </form>
 
-    <p text-right tappable (click)="forgotPass()" class="paz">
-      <ion-text color="light">
-        <strong>Forgot Pass?</strong>
-      </ion-text>
-    </p>
+    
 
     <div>
       <ion-button
-        icon-left
         size="medium"
         expand="full"
         shape="round"
@@ -75,8 +70,8 @@
         [disabled]="!onLoginForm.valid"
         tappable
       >
-        <ion-icon name="log-in"></ion-icon>
-        Signin
+
+        Entrar
       </ion-button>
     </div>
 
