--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -2,8 +2,8 @@
   ion-content {
     --background: linear-gradient(
       135deg,
-      var(--ion-color-dark),
-      var(--ion-color-primary)
+      red,
+      blue
     );
   }
 }
